# economic-research-agent

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  USE_CASE_REPORT.md  debug_hud.py  debug_hud_deep.py  inspect_runner.py  mcp_server.py  pyproject.toml  requirements.txt  run_local.py  server.py  set_secrets.sh  simulate_cloud_import.sh  streamlit_app.py  verify_apis.py
.adk/: session.db
deployment/: deploy.py
deployment/terraform/: build_triggers.tf
economic_research_agent/: __init__.py  agent.py  prompt.py
economic_research_agent/.adk/: session.db
economic_research_agent/app_utils/: deploy.py
economic_research_agent/playground/: app.py
economic_research_agent/shared_libraries/: helper.py  models.py  typing.py
economic_research_agent/sub_agents/: agent.py
economic_research_agent/tools/: bea_skill.py  bls_api_skill.py  bls_functions.py  bls_skill.py  census_skill.py  climate_resilience_skill.py  company_relocation_skill.py  eia_skill.py  fec_skill.py  fred_skill.py  geo_skill.py  hq_relocation_skill.py  hud_skill.py  lifestyle_logistics_incentives_skills.py  macro_foundation_skill.py  metro_matrix_skill.py  policy_risk_cola_skills.py  political_climate_skill.py  real_estate_skill.py  regional_edc_skill.py  regulatory_skill.py  sentiment_skill.py  talent_pipeline_skill.py  tax_foundation_skill.py  (+3 more)
eval/: __init__.py  run_eval.py
ghp_agent/: .pylintrc  Makefile  README.md  pyproject.toml
notebooks/: bureau_of_labor_statistics.ipynb  census-API.ipynb  union.txt
old/: README.md  pyproject.toml
server/: main.py
(+67 files in other folders)
